--- a/package.json
+++ b/package.json
@@ -15,13 +15,17 @@
     "connect-timeout": "^1.9.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^6.2.0",
     "express": "^4.16.1",
     "express-session": "^1.15.2",
     "helmet": "^3.13.0",
+    "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.1.10",
     "mongoose": "^5.4.11",
-    "redis": "^2.8.0"
+    "redis": "^2.8.0",
+    "universal-cookie": "^4.0.3",
+    "universal-cookie-express": "^4.0.3"
   },
   "devDependencies": {
     "chai": "^4.1.2",
